# youbot_simulation

./: .gitignore
youbot_gazebo_control/: CMakeLists.txt  package.xml
youbot_gazebo_control/config/: arm_1_controller.yaml  base_controller.yaml
youbot_gazebo_control/include/plugins/: base_controller.h
youbot_gazebo_control/launch/: base_controller.launch
youbot_gazebo_control/src/: base_controller.cpp  steered_wheel_base_controller.cpp
youbot_gazebo_robot/launch/: youbot.launch  youbot_base_only.launch  youbot_cubes.launch  youbot_dual_arm.launch
youbot_gazebo_worlds/launch/: draft_world.launch  empty_world.launch  my_world.launch  red_blocks.launch  robocup_at_work_2012.launch  tower_of_hanoi.launch
youbot_gazebo_worlds/urdf/: custom_world_red_blocks.world  custom_world_red_table.world  cworld.sdf  harbour.config  harbour.sdf  model.config  model.sdf  tables_and_cubes.world
youbot_gazebo_worlds/world_models/Red_Table_Cube/: model.config  model.sdf
youbot_gazebo_worlds/world_models/Room/: model.config  model.sdf
youbot_gazebo_worlds/world_models/bottle/: model.sdf
youbot_gazebo_worlds/world_models/bottle/meshes/: bottle.dae
youbot_gazebo_worlds/world_models/cup_green_small/: model.config  model.sdf
youbot_gazebo_worlds/world_models/glass/: model.config  model.sdf
